# node_sound

./: Cargo.toml  LICENSE  README.md  bump_ver.sh  index.html  quok.ron  rename.sh  rustc-ice-2025-09-06T17_24_37-2464.txt
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: sw.js
node_sound_app/: Cargo.toml  index.html
node_sound_app/assets/: manifest.json
node_sound_app/src/: main.rs
node_sound_core/: Cargo.toml
node_sound_core/src/: constants.rs  lib.rs  sound_map.rs
node_sound_core/src/nodes/: abs_node.rs  after_node.rs  amplify_node.rs  automated_bpm_sync_node.rs  automated_clamp.rs  automated_clamp_node.rs  automated_delay_repeat_node.rs  automated_duration_node.rs  automated_hold_node.rs  automated_mod_node.rs  automated_mod_raw_node.rs  automated_sawtooth_node.rs  automated_sine_node.rs  automated_skip_node.rs  automated_speed_node.rs  automated_square_node.rs  automated_translate_node.rs  automated_triangle_node.rs  automated_wave_shaper_node.rs  automated_wave_table_node.rs  avg_node.rs  bit_crush_node.rs  bpm_sync_node.rs  bpm_sync_source_node.rs  clamp_node.rs  clamp_to_note_node.rs  code_node.rs  const_node.rs  daw_automation_mix_node.rs  daw_automation_source_node.rs  daw_input_node.rs  delay_node.rs  delay_repeat_node.rs  duration_node.rs  eq_node.rs  file_node.rs  flip_node.rs  fm_operator_node.rs  fm_synth_node.rs  glitch_node.rs  (+46 more)
node_sound_core/src/sound_graph/: copy_paste.rs  copy_paste_del_helpers.rs  float_selector.rs  graph.rs  graph_types.rs  mod.rs  note.rs  themes.rs  wave_table_graph.rs
node_sound_core/src/sounds/: abs.rs  after.rs  amplify.rs  automated_bpm_sync.rs  automated_clamp.rs  automated_delay_repeat.rs  automated_duration.rs  automated_hold.rs  automated_mod.rs  automated_mod_raw.rs  automated_sawtooth.rs  automated_sine.rs  automated_skip.rs  automated_speed.rs  automated_square.rs  automated_translate.rs  automated_triangle.rs  automated_wave_table.rs  avg.rs  bit_crush.rs  bpm_sync.rs  bpm_sync_source.rs  clamp.rs  clamp_to_note.rs  cloneable_decoder.rs  code_source.rs  const_wave.rs  daw_automation_mix.rs  daw_automation_source.rs  daw_input.rs  delay.rs  delay_repeat.rs  duration.rs  eq.rs  flip.rs  fm_operator.rs  fm_synth.rs  glitch.rs  grain.rs  helpers.rs  (+40 more)
node_sound_vst/: Cargo.toml
node_sound_vst/src/: lib.rs  presets.rs
node_sound_vst_effect/: Cargo.toml
node_sound_vst_effect/src/: lib.rs
src/: constants.rs  macros.rs  main.rs  mobile_wasm_touch_events.rs  node_graph.rs  sound_map.rs  sound_queue.rs  wave_table.rs
src/components/: mod.rs
src/nodes/: abs_node.rs  advanced_delay_node.rs  amplify_node.rs  automated_clamp.rs  automated_sawtooth.rs  automated_sawtooth_node.rs  automated_sine_node.rs  automated_translate_node.rs  clamp_node.rs  const_node.rs  delay_node.rs  duration_node.rs  file_node.rs  lfo_node.rs  merge_channels.rs  merge_channels_node.rs  midi_node.rs  mix_node.rs  mod.rs  mod_node.rs  noise_node.rs  pop_node.rs  repeat_infinite.rs  reverb.rs  sawtooth_node.rs  sine_node.rs  skip.rs  skip_node.rs  speed_node.rs  split_channels_node.rs  square_node.rs  translate_node.rs  triangle_node.rs
src/sound_graph/: async_helpers.rs  graph.rs  graph_types.rs  mod.rs  nodes.rs  save_management.rs  sound_queue.rs  types.rs
src/sound_graph/nodes/: mix_node.rs  mod.rs  sawtooth_node.rs  triangle_node.rs
src/sound_graph/nodes/sounds/: finite.rs  mod.rs  sawtooth.rs  source_wrapper.rs  square.rs  triangle.rs
src/sounds/: abs.rs  advanced_delay.rs  automated_mod.rs  automated_sawtooth.rs  automated_sine.rs  automated_square.rs  automated_translate.rs  automated_triangle.rs  clamp.rs  cloneable_decoder.rs  impls.rs  lfo.rs  mod.rs  noise.rs  pitch_shifter.rs  pop.rs  source_wrapper.rs  split_channels.rs  synth_rs_midi.rs  translate_wave.rs  triangle.rs
src/sources/: mod.rs  source.rs  triangle.rs  wave_tables.rs
tests/: Cargo.toml
tests/src/: main.rs
xtask/: Cargo.toml
