[package]
name = "node_sound"
version = "0.1.0"
authors = ["Lubba64"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
eframe = "0.27.2"
egui_node_graph_2 = {version = "0.4.1", git="https://github.com/Lubba-64/egui_node_graph_2.git", features = ["persistence"]}
dyn-clone = "1.0.17"
serde = {version = "1.0.198", features = ["derive"]}
