[package]
name = "node_sound"
version = "1.2.0"
authors = ["Lubba64"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = {version = "0.17.3", features = ["wasm-bindgen"]}
eframe = {version = "0.27.2", features = ["ron", "serde"]}
egui_node_graph_2 = {version = "0.4.1", git="https://github.com/Lubba-64/egui_node_graph_2.git", features = ["persistence"]}
dyn-clone = "1.0.17"
serde = {version = "1.0.198", features = ["derive"]}
rfd = {version = "0.14.1", features = ["file-handle-inner"]}
ron = "0.8.1"
seeded-random = "0.6.0"
rand = "0.8.5"
hound = "3.5.1"
realfft = "3.3.0"
itertools = "0.13.0"
futures = "0.3.30"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
tokio = { version = "1.38.0", features = ["time"] }
open = {version = "5.1.4", optional = true}
synthrs = {version = "0.1.0", git="https://github.com/Lubba-64/synthrs.git", features = ["ser"]}
weblog = "0.3.0"

[features]
non-wasm = ["open"]
