[package]
name = "node_sound_core"
version = "3.0.1"
authors = ["Lubba64"]
edition = "2024"

[dependencies]
rodio = { version = "0.19", features = ["wasm-bindgen"] }
eframe = { version = "0.31", features = ["ron", "serde"] }
egui_node_graph_2 = { version = "0.4.1", git = "https://github.com/Lubba-64/egui_node_graph_2.git", features = [
  "persistence",
] }
dyn-clone = "1.0.20"
serde = { version = "1.0.198", features = ["derive"] }
rfd = { version = "0.14.1", features = ["file-handle-inner"] }
ron = "0.8.1"
seeded-random = "0.6.0"
rand = "0.8.5"
hound = "3.5.1"
realfft = "3.3.0"
itertools = "0.13.0"
futures = "0.3.30"
getrandom = { version = "0.2.15", features = ["js"] }
tokio = { version = "1.38.0", features = ["time"] }
open = { version = "5.1.4"}
synthrs = { version = "0.1.0", git = "https://github.com/Lubba-64/synthrs.git", features = [
  "ser",
] }
weblog = "0.3.0"
pitch_shift = "1.0.0"
egui_extras_xt = { version = "*", git = "https://github.com/xTibor/egui_extras_xt.git", features = [
  "knobs",
] }
arboard = "3.6.0"
egui_plot = "0.31"
egui_code_editor = "^0.2.13"
