[package]
name = "node_sound_vst"
version = "1.9.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "cd1c66b054a8ff7d44084369b7022a0272ac690e"}
nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "cd1c66b054a8ff7d44084369b7022a0272ac690e" }
node_sound_core = { version = "*", path = "../node_sound_core", features = ["non-wasm"]}
crossbeam = "0.8.4"
lock_api = "0.4.12"
ron = "0.8.1"
egui = "0.27.2"
pitch_shift = "1.0.0"
rodio = "0.19.0"
ezing = "0.2.1"
