[package]
name = "node_sound_vst"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "d64b2ab"}
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "d64b2ab" }
node_sound_core = { version = "*", path = "../node_sound_core"}
crossbeam = "0.8.4"
lock_api = "0.4.12"
ron = "0.8.1"
pitch_shift = "1.0.0"
rodio = "0.19.0"
ezing = "0.2.1"
futures = "0.3.30"
